fix(mgm): reduce pride flag distribution
don't want to give random pride flags that a user probably doesn't identify with unless they own literally everything else

fixes ProjectEdenGG/Issues#843